# apps/user/src/domain/dto/login.return.dto.ts
@@ -1,0 +1,3 @@
+export interface LoginReturnDto {
+  accessToken: string;
+}
